[package]
name = "cheatlib"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Console",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
minhook-sys = { version = "0.1.1", optional = true }
patternscan = "1.2.0"
lazy_static = "1.4"
anyhow = "1.0"
smartstring = "1.0"

[features]
default = ["internal"]
minhook = ["dep:minhook-sys"]
internal = []
external = []